--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,15 +1,16 @@
 // COLORS
-$primary-color: #02aab0;
-$secondary-color: #00cdac;
+$primary-color: #0010a3;
+$secondary-color: #4989ff;
 
 // $primary-color: #7f449d;
 // $secondary-color: #793fc1;
 
-$white-color: #fff;
+//$white-color: #fff;
+$white-color: rgb(255, 255, 255);
 
 $dark-grey: #333333;
 
-$dark-blue-text: #272341; // For Headings
+$dark-blue-text: #222881; // For Headings
 
 // FONT SIZE
 $default-font-size: 1.6rem;
